--- a/index.html
+++ b/index.html
@@ -123,30 +123,30 @@
         </a>
     </section>
 
-    <section id="slider" class="hidden-xxs hidden-xs hidden-sm slider-parallax full-screen with-header swiper_wrapper clearfix hidden-xs" data-autoplay="7000" data-loop="true" data-speed="1000">
+    <section id="slider" class="hidden-xxs hidden-xs hidden-sm slider-parallax full-screen with-header swiper_wrapper clearfix hidden-xs">
         <div class="slider-parallax-inner">
             <div class="swiper-container swiper-parent swiper-container-horizontal">
                 <div class="swiper-wrapper">
 
                     <!--Slide 1-->
                     <!--=======-->
-                    <div class="swiper-slide swiper-slide-active slide1">
-                        <div class="container clearfix slide-padding">
-                            <div class="row">
-                                <div class="col-sm-8">
-                                    <h2>We LOVE</h2>
-                                    <h2>To See You</h2>
-                                    <h1>smile</h1>
-                                    <p>Now Welcoming New Patients</p>
-                                    <a href="#" class="btn" data-scrollto="#specials">New Patient Offers</a>
-                                </div>
+                    <div class="swiper-slide slide-1">
+                        <div class="container clearfix">
+                            <div class="slider-caption slider-caption-left">
+                                <h2 class="we-love" data-caption-animate="fadeInUp" data-caption-delay="200">We LOVE</h2>
+                                <h2 data-caption-animate="fadeInUp" data-caption-delay="200">To See You</h2>
+                                <h1 data-caption-animate="fadeInUp" data-caption-delay="200">smile</h1>
+                                <p data-caption-animate="fadeInUp" data-caption-delay="200">Now Welcoming New Patients</p>
+                                <a class="button" data-scrollto="#specials" data-caption-animate="fadeInUp" data-caption-delay="200">New Patient Offers</a>
+
+
                             </div>
                         </div>
                     </div>
 
                     <!--Slide 2-->
                     <!--=======-->
-                    <div class="swiper-slide slide2">
+                    <div class="swiper-slide slide-2">
                         <div class="container clearfix slide-padding">
                             <div class="row">
                                 <div class="col-sm-7">
@@ -163,7 +163,7 @@
 
                     <!--Slide 3-->
                     <!--=======-->
-                    <div class="swiper-slide slide3">
+                    <div class="swiper-slide slide-3">
                         <div class="container clearfix slide-padding">
                             <div class="row">
                                 <div class="col-sm-7">
