--- a/index.html
+++ b/index.html
@@ -147,16 +147,21 @@
                     <!--Slide 2-->
                     <!--=======-->
                     <div class="swiper-slide slide-2">
-                        <div class="container clearfix slide-padding">
-                            <div class="row">
-                                <div class="col-sm-7">
-                                    <h1>See What Our<br><span class="patients">Patients Are Saying</span></h1>
-                                    <div class="stars">
-                                        <h2><i class="icon-star3"></i>&nbsp;<i class="icon-star3"></i>&nbsp;<i class="icon-star3"></i>&nbsp;<i class="icon-star3"></i>&nbsp;<i class="icon-star3"></i></h2>
-                                    </div>
-                                    <h4 class="copy">“I have complete confidence in Dr. Dietrich and his gentle, precise skill. Visiting his office is a pleasure.” &#8209;&nbsp;Marion&nbsp;G.</h4>
-                                    <a href="#" class="btn" data-offset="60" data-scrollTo="#section-reviews">Read More Reviews</a>
+                        <div class="container clearfix">
+                            <div class="slider-caption slider-caption-left">
+                                <h2 data-caption-animate="fadeInUp" data-caption-delay="200">See What Our</h2>
+                                <h2 class="patients" data-caption-animate="fadeInUp" data-caption-delay="200">Patients&nbsp;Are&nbsp;Saying</h2>
+                                <div data-caption-animate="fadeInUp" data-caption-delay="200" class="star-set">
+                                    <i class="icon-star3"></i>
+                                    <i class="icon-star3"></i>
+                                    <i class="icon-star3"></i>
+                                    <i class="icon-star3"></i>
+                                    <i class="icon-star3"></i>
                                 </div>
+                                <p data-caption-animate="fadeInUp" data-caption-delay="200">“The state of the art technology and skillful, tender touch of their hygienists and doctors is incomparable.” <span class="t700">-Kim O.</span></p>
+                                <a class="button" data-scrollto="#specials" data-caption-animate="fadeInUp" data-caption-delay="200">Read More Reviews</a>
+
+
                             </div>
                         </div>
                     </div>
