--- a/index.html
+++ b/index.html
@@ -169,14 +169,13 @@
                     <!--Slide 3-->
                     <!--=======-->
                     <div class="swiper-slide slide-3">
-                        <div class="container clearfix slide-padding">
-                            <div class="row">
-                                <div class="col-sm-7">
-                                    <h1>No Insurance?</h1>
-                                    <h2>Our patients don’t need it!</h2>
-                                    <h3>Get your preventative care <br> for a monthly fee.</h3>
-                                    <a href="#" class="btn" data-offset="60" data-scrollTo="#section-insurance">Learn More</a>
-                                </div>
+                        <div class="container clearfix">
+                            <div class="slider-caption slider-caption-left">
+                                <h2 data-caption-animate="fadeInUp" data-caption-delay="200">NO&nbsp;INSURANCE?</h2>
+                                <h3 class="patients" data-caption-animate="fadeInUp" data-caption-delay="200">Our&nbsp;Patients&nbsp;Don't&nbsp;Need&nbsp;It!</h3>
+                                <h6 data-caption-animate="fadeInUp" data-caption-delay="200">Get&nbsp;your&nbsp;preventive&nbsp;care</h6>
+                                <h6 class="monthly-fee" data-caption-animate="fadeInUp" data-caption-delay="200">for&nbsp;a&nbsp;low&nbsp;monthly&nbsp;fee.</h6>
+                                <a class="button" data-scrollto="#no-insurance" data-caption-animate="fadeInUp" data-caption-delay="200">Learn More</a>
                             </div>
                         </div>
                     </div>
