add in mobile background for slider

--- a/index.html
+++ b/index.html
@@ -116,12 +116,11 @@
 
     <!-- Marquee Slider
   ============================================= -->
-    <section id="mobile-background" class="hidden-md hidden-lg">
-        <h1 class="hidden">Dentistry for Richard Dietrich</h1>
+    <div id="mobile-slider" class="mobile-slider hidden-md hidden-lg">
         <a href="#" data-scrollTo="#section-specials" data-offset="0">
-            <img src="assets/SLIDE1-MOBILE.jpg" style="width:100%;height:auto;" alt="Dr. Richard Dietrich">
+            <img src="images/ikuta-slide-mobile.jpg" alt="Ikuta Dental Health Care">
         </a>
-    </section>
+    </div>
 
     <section id="slider" class="hidden-xxs hidden-xs hidden-sm slider-parallax full-screen with-header swiper_wrapper clearfix hidden-xs">
         <div class="slider-parallax-inner">
