finish phone slug

--- a/index.html
+++ b/index.html
@@ -192,36 +192,14 @@
 
     <div id="content" >
 
-        <section id="cta-one" class="cta__three-to-one">
+        <section id="phone-slug-1" class="phone-slug-1 phone-slug">
             <div class="container">
-                <div class="flex--wrapper icon--wrapper hidden-xs hidden-sm">
-                    <div class="flex--item">
-                        <div class="img--wrapper">
-                            <img src="assets/New%20Patient%20hotline%20icon.svg" alt="New Patient">
-                        </div>
-                    </div>
-                    <div class="flex--item">
-                        <div class="img--wrapper">
-                            <img src="assets/appointmentIcon.svg" alt="Existing Patient">
-                        </div>
-                    </div>
-                    <div class="flex--item">
-                        <div class="img--wrapper">
-                            <img src="assets/Exisiting%20icon.svg" alt="Existing Patient">
-                        </div>
-                    </div>
-                </div>
-                <div class="flex--wrapper">
-                    <div class="new-patient flex--item">
-                        <h5 class="text">New Patient Hotline</h5>
-                        <h2 class="new-patient-number"><a href="tel:1-888-492-0583">(888)&nbsp;492&#8209;0583</a></h2>
-                    </div>
-                    <div class="btn--wrapper flex--item">
-                        <a href="#" class="btn" data-target="#requestAppointmentForm" data-toggle="modal">Request An Appointment</a>
-                    </div>
-                    <div class="existing-patient flex--item">
-                        <h5 class="text">Existing Patients</h5>
-                        <h3 class="existing-patient-number"><a href="tel:1-503-228-6294">(503)&nbsp;228&#8209;6294</a></h3>
+                <div class="row">
+                    <div class="col-sm-12">
+                        <p class="new-hotline-text">NEW PATIENT HOTLINE</p>
+                        <p class="new-hotline-phone"><a href="tel:+18887038289">(888) 703&#8209;8289</a></p>
+                        <div class="button-wrap"><a class="button" data-toggle="modal" data-target="#contact-modal">Request an Appointment</a></div>
+                        <p class="existing-hotline-text">EXISTING&nbsp;PATIENTS&nbsp;CALL&nbsp;<a href="tel:+15596386321">(559)&nbsp;638&#8209;6321</a></p>
                     </div>
                 </div>
             </div>
