finish meet the doctor section mobile/desktop

--- a/index.html
+++ b/index.html
@@ -205,6 +205,32 @@
             </div>
         </section>
 
+        <section id="meet-the-doctor" class="meet-the-doctor">
+            <div class="container">
+                <div class="row row-1">
+                    <div class="center col-lg-12">
+                        <h2>Meet&nbsp;Dr.&nbsp;Dennis&nbsp;Ikuta &amp;&nbsp;Dr.&nbsp;Deric&nbsp;Ikuta</h2>
+
+                    </div>
+                </div>
+                <div class="row row-2">
+                    <div class="col-lg-6">
+
+                    </div>
+                    <div class="col-lg-6">
+                        <p>Welcome to Ikuta Dental Health Center! Dennis and Deric Ikuta, a father-and-son team, earned their dental degrees from the prestigious University of the Pacific in San Francisco. Each year, they continue their education by participating in extensive postdoctoral studies that focus on the latest clinical and family dental techniques. Their goal is to provide the best care while making you and your family more comfortable than you ever thought possible.
+                        </p>
+                        <div class="embed-responsive embed-responsive-16by9">
+                            <iframe src="https://player.vimeo.com/video/205090959" width="640" height="272" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <div class="meet-the-doctor-below">
+            <img src="images/bio.jpg" alt="Dr. Dennis Ikuta and Dr. Deric Ikuta">
+        </div>
+
         <section id="section-about" class="clearfix">
 
             <div class="about--wrapper">
