finish specials section

--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
 
     <div id="content" >
 
+        <!-- Phone Slug 1 -->
         <section id="phone-slug-1" class="phone-slug-1 phone-slug">
             <div class="container">
                 <div class="row">
@@ -205,12 +206,13 @@
             </div>
         </section>
 
+
+        <!-- Meet The Doctor -->
         <section id="meet-the-doctor" class="meet-the-doctor">
             <div class="container">
                 <div class="row row-1">
                     <div class="center col-lg-12">
                         <h2>Meet&nbsp;Dr.&nbsp;Dennis&nbsp;Ikuta &amp;&nbsp;Dr.&nbsp;Deric&nbsp;Ikuta</h2>
-
                     </div>
                 </div>
                 <div class="row row-2">
@@ -227,9 +229,151 @@
                 </div>
             </div>
         </section>
-        <div class="meet-the-doctor-below">
+
+        <!-- Meet The Doctor Below -->
+        <div class="meet-the-doctor-below hidden-lg">
             <img src="images/bio.jpg" alt="Dr. Dennis Ikuta and Dr. Deric Ikuta">
         </div>
+
+        <!-- Meet The Team -->
+        <section id="meet-the-team" class="meet-the-team">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12 center">
+                        <h2>Meet the Team</h2>
+                        <p>Select a team member to learn more.</p>
+
+                        <div id="oc-portfolio" class="center owl-carousel portfolio-carousel carousel-widget" data-margin="40" data-nav="true" data-pagi="false" data-items-xxs="1" data-items-xs="2" data-items-sm="3" data-items-md="4" data-items-lg="5" data-loop="true" data-autoplay="7000" data-speed="1000">
+
+                            <div class="oc-item" data-toggle="modal" data-target="#minnie">
+                                <div class="iportfolio">
+                                    <div class="portfolio-image">
+                                        <a>
+                                            <img src="images/team/minnie.jpg" alt="Minnie">
+                                        </a>
+                                    </div>
+                                    <h4>Minnie</h4>
+                                </div>
+                            </div>
+
+
+                            <div class="oc-item" data-toggle="modal" data-target="#george">
+                                <div class="iportfolio">
+                                    <div class="portfolio-image">
+                                        <a>
+                                            <img src="images/team/george.jpg" alt="George">
+                                        </a>
+                                    </div>
+                                    <h4>George</h4>
+                                </div>
+                            </div>
+
+
+                            <div class="oc-item" data-toggle="modal" data-target="#lisa">
+                                <div class="iportfolio">
+                                    <div class="portfolio-image">
+                                        <a>
+                                            <img src="images/team/lisa.jpg" alt="Lisa">
+                                        </a>
+                                    </div>
+                                    <h4>Lisa</h4>
+                                </div>
+                            </div>
+
+                            <div class="oc-item" data-toggle="modal" data-target="#eileen">
+                                <div class="iportfolio">
+                                    <div class="portfolio-image">
+                                        <a>
+                                            <img src="images/team/eileen.jpg" alt="Eileen">
+                                        </a>
+                                    </div>
+                                    <h4>Eileen</h4>
+                                </div>
+                            </div>
+
+                            <div class="oc-item" data-toggle="modal" data-target="#evelyn">
+                                <div class="iportfolio">
+                                    <div class="portfolio-image">
+                                        <a>
+                                            <img src="images/team/evelyn.jpg" alt="Evelyn">
+                                        </a>
+                                    </div>
+                                    <h4>Evelyn</h4>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Specials -->
+        <section id="specials">
+            <div class="container clearfix">
+                <div class="center">
+                    <h2>Limited&nbsp;Time Summer&nbsp;Specials</h2>
+                    <h3>Offers end September&nbsp;20,&nbsp;2017</h3>
+                </div>
+
+                <div class="three-blocks">
+                    <div class="block" id="block-1">
+                        <div class="specials-top">
+                            <h6>New&nbsp;Patient</h6>
+                            <h5>Dental&nbsp;Exam</h5>
+                        </div>
+                        <div class="specials-circle-wrap">
+                            <div class="specials-circle">
+                                <span class="dollar">$</span>
+                                <span class="price">65</span>
+                            </div>
+                        </div>
+                        <div class="specials-bottom">
+                            <div class="save">SAVE $156</div>
+                            <p class="description">Includes comprehensive exam by the doctor and necessary x‑rays.</p>
+                            <p class="label">(D0150, D0210)</p>
+                        </div>
+                    </div>
+
+                    <div class="block" id="block-2">
+                        <div class="specials-top">
+                            <h6>New&nbsp;Patient</h6>
+                            <h5>Dental&nbsp;Cleaning</h5>
+                        </div>
+
+                        <div class="specials-circle-wrap">
+                            <div class="specials-circle">
+                                <span class="dollar">$</span>
+                                <span class="price">45</span>
+                            </div>
+                        </div>
+
+                        <div class="specials-bottom">
+                            <div class="save">SAVE $65</div>
+                            <p class="description">Includes a professional dental cleaning. A new patient exam is required. Does not include periodontal therapy. ​ ​</p>
+                            <p class="label">(D1110)</p>
+                        </div>
+                    </div>
+
+                    <div class="block" id="block-3">
+                        <div class="specials-top">
+                            <h6>New&nbsp;Children's</h6>
+                            <h5>Cleaning&nbsp;&amp;&nbsp;Exam</h5>
+                        </div>
+                        <div class="specials-circle-wrap">
+                            <div class="specials-circle">
+                                <span class="dollar">$</span>
+                                <span class="price">99</span>
+                            </div>
+                        </div>
+                        <div class="specials-bottom">
+                            <div class="save">SAVE $195</div>
+                            <p class="description">Patients 12 and under receive a professional dental cleaning, fluoride treatment, needed x‑rays, and a comprehensive exam. </p>
+                            <p class="label">(D0150, D0272, D1120, D1208)</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <section id="section-about" class="clearfix">
 
