finish reviews section desktop/mobile

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
     <div id="content" >
 
         <!-- Phone Slug 1 -->
-        <section id="phone-slug-1" class="phone-slug-1 phone-slug">
+        <div id="phone-slug-1" class="phone-slug-1 phone-slug">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-12">
@@ -204,7 +204,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </div>
 
 
         <!-- Meet The Doctor -->
@@ -485,13 +485,24 @@
             </div>
         </section>
 
-        <section id="phone-slug-2" class="phone-slug-2 phone-slug">
+        <div id="phone-slug-2" class="phone-slug-2 phone-slug">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-12">
                         <p class="new-hotline-text">NEW PATIENT HOTLINE</p>
                         <p class="new-hotline-phone"><a href="tel:+18887038289">(888) 703&#8209;8289</a></p>
                         <div class="button-wrap"><a class="button" data-toggle="modal" data-target="#contact-modal">Request an Appointment</a></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <section id="reviews" class="reviews">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12 center">
+                        <h2>Read What Our Patients Are Saying</h2>
+                        <script type="text/javascript" src="//birdeye.com/embed/v4/147033408822140/3/2236321136"></script><div id="bf-revz-widget-2236321136" style="-webkit-overflow-scrolling:touch;"><div class="bf-dv"><span class="bf-spn"><span class="bf-spn-2">Reviews Powered by </span><a class="bf-pwr" href="//www.tysonsteele.com/" target="_blank">Tyson Steele Associates</a></span></div></div>
                     </div>
                 </div>
             </div>
