finish no-insurance section

--- a/index.html
+++ b/index.html
@@ -508,6 +508,30 @@
             </div>
         </section>
 
+        <section id="no-insurance" class="no-insurance">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6 col-1 col-md-12">
+                        <h2>NO &nbsp;INSURANCE?</h2>
+                        <h5>Our&nbsp;Patients&nbsp;Don't&nbsp;Need&nbsp;It!</h5>
+                        <h6>Get your preventive care</h6>
+                        <h6 class="monthly-fee">for a low monthly fee.</h6>
+                        <p>Exclusively for our uninsured&nbsp;patients.</p>
+                        <p>Make easy monthly payments for your preventive&nbsp;care.</p>
+                        <p>Save money on your treatment.</p>
+                        <div class="button-wrap"><a class="button" href="#" target="_blank">Learn More</a></div>
+                    </div>
+                    <div class="col-lg-6 col-md-12 col-2">
+
+                    </div>
+
+                </div>
+            </div>
+        </section>
+        <div class="no-insurance-bottom hidden-bottom">
+            <img src="images/insurance.jpg" alt="No Insurance?">
+        </div>
+
 
         <section id="section-location" class="content-section">
 
