--- a/index.html
+++ b/index.html
@@ -485,6 +485,7 @@
             </div>
         </section>
 
+        <!-- Phone Slug 2 -->
         <div id="phone-slug-2" class="phone-slug-2 phone-slug">
             <div class="container">
                 <div class="row">
@@ -497,6 +498,7 @@
             </div>
         </div>
 
+        <!-- Reviews -->
         <section id="reviews" class="reviews">
             <div class="container">
                 <div class="row">
@@ -508,6 +510,7 @@
             </div>
         </section>
 
+        <!-- No Insurance -->
         <section id="no-insurance" class="no-insurance">
             <div class="container">
                 <div class="row">
@@ -528,9 +531,54 @@
                 </div>
             </div>
         </section>
-        <div class="no-insurance-bottom hidden-bottom">
+
+        <!-- No Insurance Bottom -->
+        <div class="no-insurance-bottom hidden-lg">
             <img src="images/insurance.jpg" alt="No Insurance?">
         </div>
+
+        <!-- Services -->
+        <section id="services" class="services">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12 center">
+                        <h2>Our Services</h2>
+                        <p>By actively preventing disease and decay through regular home care, professional dental cleanings and regular exams, we’ll partner with you to maintain your healthy, beautiful smile. Prevention is always better than treatment, so if it’s been a while since you’ve seen a dentist, please give us a call or <a href="#" data-toggle="modal" data-target="#contact-modal">click&nbsp;to&nbsp;request&nbsp;an&nbsp;appointment</a>.</p>
+                    </div>
+                </div>
+                <div class="row row-2"></div>
+                <div class="col-lg-6 col-lg-push-6 col-1">
+                    <h3>Smile Makeovers</h3>
+                    <p>Cosmetic dentistry is one of the most cost-effective ways to improve your appearance. A beautiful, bright, healthy smile will increase self-confidence and overall life satisfaction. Cosmetic dentistry includes things like tooth-colored restorations, dental implants, and crowns. We have many options, so please call us today!
+                    </p>
+                </div>
+                <div class="col-lg-6 col-lg-pull-6 col-2">
+
+                </div>
+
+            </div>
+        </section>
+        <div class="services-below hidden-lg">
+            <img src="images/services/cosmetic.jpg" alt="Smile Makeovers">
+        </div>
+
+        <!-- Services Two -->
+        <section id="services-two" class="services-two">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-6 col-1">
+                        <div class="img-wrap"><img src="images/services/sedation.jpg" alt="Sedation Dentistry"></div>
+                        <h3>Sedation Dentistry</h3>
+                        <p>Sedation dentistry is an excellent treatment for patients with extensive dental needs, or who are concerned about anxiety, difficulty getting numb, or sensitive teeth.</p>
+                    </div>
+                    <div class="col-sm-6 col-2">
+                        <div class="img-wrap"><img src="images/services/orthodontics.jpg" alt="Orthodontics"></div>
+                        <h3>Orthodontics</h3>
+                        <p>Not only can orthodontics help create beautiful smiles, early- intervention orthodontics can also help prevent sleep apnea and promote your lifelong health. Call today for a consultation!</p>
+                    </div>
+                </div>
+            </div>
+        </section>
 
 
         <section id="section-location" class="content-section">
