finish more services section

--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
             </div>
         </section>
         <div class="services-below hidden-lg">
-            <img src="images/services/cosmetic.jpg" alt="Smile Makeovers">
+            <img src="images/services/cosmetic-mobile.jpg" alt="Smile Makeovers">
         </div>
 
         <!-- Services Two -->
@@ -579,6 +579,224 @@
                 </div>
             </div>
         </section>
+
+        <!-- More Services -->
+        <section id="more-services" class="more-services">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12 center">
+                        <h2>More Services</h2>
+                        <p>Click an item below to learn more.</p>
+
+                        <div id="oc-portfolio-2" class="center owl-carousel portfolio-carousel carousel-widget" data-margin="40" data-nav="true" data-pagi="false" data-items-xxs="1" data-items-xs="2" data-items-sm="3" data-items-md="4" data-items-lg="4" data-loop="true" data-autoplay="7000" data-speed="1000">
+
+                            <div class="oc-item" data-toggle="modal" data-target="#family-care">
+                                <div class="iportfolio">
+                                    <div class="portfolio-image">
+                                        <a>
+                                            <img src="images/services/family-care.jpg" alt="Family Care">
+                                        </a>
+                                    </div>
+                                    <h4>Family Care</h4>
+                                </div>
+                            </div>
+
+                            <div class="oc-item" data-toggle="modal" data-target="#sleep-apnea">
+                                <div class="iportfolio">
+                                    <div class="portfolio-image">
+                                        <a>
+                                            <img src="images/services/apnea.jpg" alt="Sleep Apnea">
+                                        </a>
+                                    </div>
+                                    <h4>Sleep Apnea</h4>
+                                </div>
+                            </div>
+
+                            <div class="oc-item" data-toggle="modal" data-target="#tmj">
+                                <div class="iportfolio">
+                                    <div class="portfolio-image">
+                                        <a>
+                                            <img src="images/services/tmj.jpg" alt="TMJ/TMD">
+                                        </a>
+                                    </div>
+                                    <h4>TMJ/TMD</h4>
+                                </div>
+                            </div>
+
+                            <div class="oc-item" data-toggle="modal" data-target="#invisalign">
+                                <div class="iportfolio">
+                                    <div class="portfolio-image">
+                                        <a>
+                                            <img src="images/services/Invisalign.jpg" alt="Invisalign">
+                                        </a>
+                                    </div>
+                                    <h4>Invisalign</h4>
+                                </div>
+                            </div>
+
+                            <div class="oc-item" data-toggle="modal" data-target="#neuromuscular">
+                                <div class="iportfolio">
+                                    <div class="portfolio-image">
+                                        <a>
+                                            <img src="images/services/neuromuscular-ortho.jpg" alt="Neuromuscular Orthodontics">
+                                        </a>
+                                    </div>
+                                    <h4>Neuromuscular Orthodontics</h4>
+                                </div>
+                            </div>
+
+                            <div class="oc-item" data-toggle="modal" data-target="#mouthguard">
+                                <div class="iportfolio">
+                                    <div class="portfolio-image">
+                                        <a>
+                                            <img src="images/services/pure-power-mouthguard.jpg" alt="Pure Power Mouthguard">
+                                        </a>
+                                    </div>
+                                    <h4>Pure Power Mouthguard</h4>
+                                </div>
+                            </div>
+
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- More Services Modals -->
+
+        <div class="modal fade service-modal" id="mouthguard" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-body">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                            <h4 class="modal-title">Pure Power Mouthguard</h4>
+                        </div>
+                        <div class="modal-body">
+                            <div class="img-wrap center">
+                                <img src="images/services/pure-power-mouthguard.jpg" alt="Pure Power Mouthguard">
+                            </div>
+                            <p>
+                                In virtually 90% of the population, the lower jaw is not in its optimal, most comfortable position, which causes pain and muscle tension in the jaw and surrounding area. A new mouth guard has been created based on the science of neuromuscular dentistry and is called the Pure Power Mouth Guard.
+                            </p>
+                            <p>If you would like to learn more about the Pure Power Mouth Guard and whether it can work for you, please contact Drs. Dennis and Deric Ikuta, serving cosmetic dentistry patients in Fresno, Visalia, Reedley, Clovis, and Hanford, California, today to schedule your initial consultation.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="modal fade service-modal" id="neuromuscular" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-body">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                            <h4 class="modal-title">Neuromuscular Orthodontics</h4>
+                        </div>
+                        <div class="modal-body">
+                            <div class="img-wrap center">
+                                <img src="images/services/neuromuscular-ortho.jpg" alt="Neuromuscular Orthodontics">
+                            </div>
+                            <p>
+                                Neuromuscular functional orthodontics (NFO) is a highly specialized area of dentistry that combines traditional orthodontics with the principles of neuromuscular dentistry to effectively treat TMD issues. It results in a more desirable orthodontic outcome, functionally and cosmetically.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="modal fade service-modal" id="invisalign" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-body">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                            <h4 class="modal-title">Invisalign® Orthodontics</h4>
+                        </div>
+                        <div class="modal-body">
+                            <div class="img-wrap center">
+                                <img src="images/services/Invisalign.jpg" alt="Invisalign">
+                            </div>
+                            <p>
+                                These “invisible” aligners are the latest in orthodontic technology for adults and teens. Straight teeth and a revitalized smile no longer need to come from a mouth full of unattractive wire and bracket braces. Enhancing self-esteem and physical confidence, invisible braces offer an esthetic and barely visible alternative to conventional wire/bracket braces.  
+                            </p>
+                            <p>Get the smile you've always wanted with Invisalign® Orthodontics.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="modal fade service-modal" id="tmj" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-body">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                            <h4 class="modal-title">TMJ Treatment</h4>
+                        </div>
+                        <div class="modal-body">
+                            <div class="img-wrap center">
+                                <img src="images/services/tmj.jpg" alt="TMJ Treatment">
+                            </div>
+                            <p>
+                                If you suffer from headaches or pain, clicking or popping while chewing, there may be problems with your temporomandibular joint (or TMJ). Call us today to schedule a free TMJ treatment consultation.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="modal fade service-modal" id="family-care" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-body">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                            <h4 class="modal-title">Family Care</h4>
+                        </div>
+                        <div class="modal-body">
+                            <div class="img-wrap center">
+                                <img src="images/services/family-care.jpg" alt="Family Care">
+                            </div>
+                            <p>
+                                From toddlers to the elderly, our skilled dental team is familiar with the unique needs of every patient, no matter their age. Our goal is to help them develop great oral habits that will last them a lifetime.
+                            </p>
+                            <p>Join us today and discover how our practice can help treat your entire family.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="modal fade service-modal" id="sleep-apnea" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-body">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                            <h4 class="modal-title">Sleep Apnea Treatment</h4>
+                        </div>
+                        <div class="modal-body">
+                            <div class="img-wrap center">
+                                <img src="images/services/apnea.jpg" alt="Sleep Apnea Treatment">
+                            </div>
+                            <p>
+                                Obstructive sleep apnea occurs when the airway completely collapses, blocking airflow into the lungs. The harder one tries to breathe, the tighter the airway seals. This airway obstruction persists until the brain partially awakens the person, unconsciously closing the jaw and returning the tongue and throat to a normal position.
+                            </p>
+                            <p>We offer effective, nonsurgical relief from sleep apnea and other sleep-related disorders—including snoring. Ask us how you can get the restful, healthy sleep you’ve been missing.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
 
 
         <section id="section-location" class="content-section">
